--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -1,124 +1,1 @@
-name: autodevops-angular-demo-docker-build-deploy
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
-
-concurrency:
-  group: autodevops-angular-demo-docker-${{ github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
-  packages: write
-  id-token: write
-
-jobs:
-  code-scan:
-    name: Code Scanning
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript-typescript
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-
-  install-and-test:
-    name: Install & Test Angular
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs: code-scan
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Install dependencies
-        run: npm ci
-      - name: Lint
-        run: npm run lint --if-present
-      - name: Run tests
-        run: npm run test --if-present -- --no-watch --no-progress --browsers=ChromeHeadless
-
-  build-app:
-    name: Build Angular App
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    needs: install-and-test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Install dependencies
-        run: npm ci
-      - name: Build App
-        run: npm run build --if-present
-
-  docker-build-push:
-    name: Docker Build & Push
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    needs: build-app
-    if: github.ref == 'refs/heads/main'
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-    env:
-      IMAGE_NAME: ghcr.io/${{ github.repository }}
-      IMAGE_TAG: ${{ github.sha }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  deploy:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    needs: docker-build-push
-    if: github.ref == 'refs/heads/main'
-    environment:
-      name: production
-      url: ${{ steps.deploy.outputs.url }}
-    steps:
-      - name: Deploy (placeholder)
-        id: deploy
-        run: echo "Implement your deployment logic here. Reference image: ghcr.io/${{ github.repository }}:${{ github.sha }}"
-        env:
-          IMAGE_NAME: ghcr.io/${{ github.repository }}
-          IMAGE_TAG: ${{ github.sha }}
+Error processing response: Failed to tokenize code block: github.event.pull_request.number || github.ref. A FunctionIdBlock is composed of either a plugin name and function name separated by a single dot, or just a function name. Both plugin and function names can only contain letters, numbers and underscores. The content provided was: github.event.pull_request.number
