--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -15,6 +15,8 @@ concurrency:
 
 permissions:
   contents: read
+  packages: write
+  id-token: write
 
 jobs:
   build-angular-app:
@@ -42,26 +44,12 @@ jobs:
           name: dist
           path: dist/
 
-  static-code-analysis:
-    name: Static Code Analysis
-    runs-on: ubuntu-latest
-    needs: build-angular-app
-    timeout-minutes: 10
-    if: false
-    steps:
-      - name: Placeholder - static analysis step
-        run: echo "Static code analysis skipped (add appropriate actions if needed)"
-
   build-and-push-docker-image:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: build-angular-app
     timeout-minutes: 20
     environment: production
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -114,3 +102,27 @@ jobs:
     steps:
       - name: Deploy using kubectl (placeholder)
         run: echo "Deploy step would go here"
+
+  codeql-code-scanning:
+    name: CodeQL - Analyze
+    runs-on: ubuntu-latest
+    needs: build-angular-app
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    timeout-minutes: 15
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
