--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -10,137 +10,131 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: autodevops-angular-demo-docker-${{ github.ref }}
+  group: autodevops-angular-demo-docker-build-deploy-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
   contents: read
   id-token: write
+  actions: read
+  packages: write
 
 jobs:
-  build:
-    name: Build Angular Application
+  code-quality-and-security:
+    name: Lint, Format Check & Code Scan
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 15
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          node-version: 20.x
+          cache: npm
       - name: Install dependencies
         run: npm ci
+      - name: Check formatting
+        run: npx prettier --check .
+      - name: Lint code
+        run: npm run lint --if-present
+      - name: Run code scanning (CodeQL)
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
 
-      - name: Run lint
-        run: npm run lint
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: code-quality-and-security
+    timeout-minutes: 15
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
 
-      - name: Run unit tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
-
-      - name: Build Angular app
-        run: npm run build -- --configuration=production
-
-      - name: Upload build artifact
+  build-app:
+    name: Build Angular App
+    runs-on: ubuntu-latest
+    needs: test
+    timeout-minutes: 15
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
+      - name: Build app for production
+        run: npm run build -- --configuration production
+      - name: Upload dist artifact
         uses: actions/upload-artifact@v4
         with:
-          name: dist-app
+          name: angular-dist
           path: dist/
 
-  dockerize:
-    name: Build and Push Docker Image
+  docker-build-push:
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-app
+    if: github.event_name != 'pull_request'
     timeout-minutes: 20
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
+    env:
+      REGISTRY: ghcr.io
+      IMAGE_NAME: ${{ github.repository }}
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Download build artifact
+      - name: Download dist artifact
         uses: actions/download-artifact@v4
         with:
-          name: dist-app
-          path: dist
-
+          name: angular-dist
+          path: dist/
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
+      - name: Log in to the GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=sha,event=push
-            type=ref,event=branch
-            type=ref,event=pr
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
-          build-args: |
-            BUILD_DIR=dist
+          file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          build-args: |
+            DIST_PATH=dist/
+      - name: Logout from Docker registry
+        run: docker logout ${{ env.REGISTRY }}
 
   deploy:
-    name: Deploy to Production
+    name: Deploy to Production Environment
     runs-on: ubuntu-latest
-    needs: dockerize
+    needs: docker-build-push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     timeout-minutes: 15
-    if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
+    environment:
+      name: production
+      url: ${{ steps.deploy-url.outputs.url }}
     steps:
-      - name: Deploy to Production (placeholder)
-        run: echo "Implement your deployment step here, e.g., kubectl apply, helm upgrade, ssh to server, or use another GitHub Action"
-        env:
-          IMAGE_TAG: ${{ needs.dockerize.outputs.image_tag }}
-
-  codeql:
-    name: CodeQL Analyze
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    if: ${{ github.event_name != 'pull_request' || github.base_ref == 'main' }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+      - name: Download deployment manifest (replace with actual manifest as needed)
+        run: echo "Replace this step with deployment to your production environment."
+      - name: Set deployment url output
+        id: deploy-url
+        run: echo "url=https://your-app-url.example.com" >> $GITHUB_OUTPUT
