--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -15,126 +15,133 @@ concurrency:
 
 permissions:
   contents: read
-  id-token: write
-  actions: read
-  packages: write
 
 jobs:
-  code-quality-and-security:
+  lint-format-code-scan:
     name: Lint, Format Check & Code Scan
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 10
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x
-          cache: npm
+          node-version: '20.x'
+
       - name: Install dependencies
         run: npm ci
-      - name: Check formatting
-        run: npx prettier --check .
-      - name: Lint code
-        run: npm run lint --if-present
-      - name: Run code scanning (CodeQL)
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+
+      - name: Run Linter
+        run: npm run lint
+
+      - name: Check formatting with Prettier
+        run: npm run format:check
+
+      - name: Run CodeQL Static Analysis
+        uses: github/codeql-action/analyze@v2
+        if: always()
+        continue-on-error: true
 
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
-    needs: code-quality-and-security
-    timeout-minutes: 15
+    needs: lint-format-code-scan
+    timeout-minutes: 10
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x
-          cache: npm
+          node-version: '20.x'
+
       - name: Install dependencies
         run: npm ci
-      - name: Run tests
-        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
 
-  build-app:
+      - name: Run Unit Tests
+        run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
+
+  build:
     name: Build Angular App
     runs-on: ubuntu-latest
     needs: test
-    timeout-minutes: 15
+    timeout-minutes: 10
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x
-          cache: npm
+          node-version: '20.x'
+
       - name: Install dependencies
         run: npm ci
-      - name: Build app for production
-        run: npm run build -- --configuration production
-      - name: Upload dist artifact
-        uses: actions/upload-artifact@v4
+
+      - name: Build Angular application
+        run: npm run build
+
+      - name: Upload production build artifact
+        uses: actions/upload-artifact@v3
         with:
-          name: angular-dist
+          name: dist
           path: dist/
 
-  docker-build-push:
+  dockerize:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
-    needs: build-app
-    if: github.event_name != 'pull_request'
-    timeout-minutes: 20
-    env:
-      REGISTRY: ghcr.io
-      IMAGE_NAME: ${{ github.repository }}
+    needs: build
+    timeout-minutes: 15
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Download dist artifact
-        uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Download production build artifact
+        uses: actions/download-artifact@v3
         with:
-          name: angular-dist
-          path: dist/
+          name: dist
+          path: dist
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Log in to the GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: Dockerfile
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          build-args: |
-            DIST_PATH=dist/
-      - name: Logout from Docker registry
-        run: docker logout ${{ env.REGISTRY }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo:latest
 
   deploy:
     name: Deploy to Production Environment
     runs-on: ubuntu-latest
-    needs: docker-build-push
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: dockerize
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     timeout-minutes: 15
-    environment:
-      name: production
-      url: ${{ steps.deploy-url.outputs.url }}
+
     steps:
-      - name: Download deployment manifest (replace with actual manifest as needed)
-        run: echo "Replace this step with deployment to your production environment."
-      - name: Set deployment url output
-        id: deploy-url
-        run: echo "url=https://your-app-url.example.com" >> $GITHUB_OUTPUT
+      - name: Deploy using SSH and Docker Compose
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.PROD_SERVER_HOST }}
+          username: ${{ secrets.PROD_SERVER_USER }}
+          key: ${{ secrets.PROD_SERVER_SSH_KEY }}
+          port: ${{ secrets.PROD_SERVER_PORT }}
+          script: |
+            cd /path/to/your/docker-compose-directory
+            docker-compose pull
+            docker-compose up -d --remove-orphans
