--- a/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
+++ b/.github/workflows/autodevops-angular-demo-docker-build-deploy.yml
@@ -10,145 +10,116 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: autodevops-angular-demo-docker-build-deploy-${{ github.ref }}
+  group: autodevops-angular-demo-docker-build-deploy-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 permissions:
   contents: read
   id-token: write
-  pull-requests: read
 
 jobs:
-  build:
-    name: Build Angular Application
+  lint:
+    name: Lint Angular code
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 10
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            **/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          node-version: '20'
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
-
-      - name: Run lint
+      - name: Run Linter
         run: npm run lint
-
-      - name: Run tests
+  test:
+    name: Run Angular tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run unit tests
         run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadless
-
-      - name: Build Angular app
-        run: npm run build -- --configuration=production
-
-      - name: Upload production build artifact
+      - name: Upload test results
+        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
-          name: angular-dist
-          path: dist/
-          if-no-files-found: error
-          retention-days: 3
-
-  docker:
-    name: Build and Push Docker Image
+          name: test-results
+          path: coverage/
+  build:
+    name: Build Angular app & Docker Image
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs: build
-    if: github.event_name != 'pull_request'
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
+    timeout-minutes: 20
+    needs: test
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          name: angular-dist
-          path: dist/
-
+          node-version: '20'
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build Angular Production
+        run: npm run build -- --configuration production
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
+      - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for Docker
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
-
-      - name: Build and push Docker image
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker
+      - name: Build and Push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            NODE_ENV=production
-
-      - name: Upload Docker image digest
-        run: echo "${{ steps.meta.outputs.version }}" > docker.version.txt
-
   deploy:
-    name: Deploy Application
+    name: Deploy to Production
     runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
     timeout-minutes: 15
-    needs: docker
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     environment:
       name: production
       url: ${{ steps.deploy.outputs.url }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download Docker image version artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: angular-dist
-          path: dist/
-
-      # Placeholder deployment step, replace with real deployment provider/actions
-      - name: Deploy to Kubernetes/Cloud Service
+      - name: Deploy using Docker image
+        id: deploy
         run: |
-          echo "Replace this step with an actual deployment command, e.g., kubectl, helm, or your cloud provider's CLI tool."
+          echo "Add your production deployment script here using the Docker image: $DOCKER_IMAGE_TAG"
         env:
-          DOCKER_IMAGE: ghcr.io/${{ github.repository }}:latest
-
-  security:
-    name: Code Security Analysis
+          DOCKER_IMAGE_TAG: ${{ needs.build.outputs.docker_image_tag }}
+  codeql-scan:
+    name: CodeQL Analyze
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 20
     permissions:
-      security-events: write
+      actions: read
       contents: read
+      security-events: write
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
@@ -158,13 +129,3 @@ jobs:
         uses: github/codeql-action/autobuild@v3
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
-
-  dependabot:
-    name: Dependency Vulnerability Scan
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Run npm audit for vulnerabilities
-        run: npm audit --production --audit-level=high || exit 0
